--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">HTML</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 80%;"><b>80%</b></span>
+                <span class="animate" style="width: 75%;"><b>75%</b></span>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">CSS</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 70%;"><b>70%</b></span>
+                <span class="animate" style="width: 65%;"><b>65%</b></span>
             </div>
         </div>
 
@@ -121,7 +121,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">JavaScript</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 60%;"><b>60%</b></span>
+                <span class="animate" style="width: 45%;"><b>45%</b></span>
             </div>
         </div>
 
@@ -129,23 +129,23 @@
         <div class="skills-bar">
             <div class="skills-bar-label">WordPress</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 80%;"><b>80%</b></span>
+                <span class="animate" style="width: 75%;"><b>75%</b></span>
             </div>
         </div>
 
         <!-- Python Skill -->
         <div class="skills-bar">
-            <div class="skills-bar-label">Python</div>
+            <div class="skills-bar-label">Figma</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 60%;"><b>60%</b></span>
+                <span class="animate" style="width: 70%;"><b>70%</b></span>
             </div>
         </div>
 
         <!-- Java Skill -->
         <div class="skills-bar">
-            <div class="skills-bar-label">Java</div>
+            <div class="skills-bar-label">Canva</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 40%;"><b>40%</b></span>
+                <span class="animate" style="width: 80%;"><b>80%</b></span>
             </div>
         </div>
 
