--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">HTML</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 75%;"><b>75%</b></span>
+                <span class="animate" style="width: 65%;"><b>65%</b></span>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">CSS</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 65%;"><b>65%</b></span>
+                <span class="animate" style="width: 60%;"><b>60%</b></span>
             </div>
         </div>
 
@@ -129,7 +129,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">WordPress</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 75%;"><b>75%</b></span>
+                <span class="animate" style="width: 80%;"><b>80%</b></span>
             </div>
         </div>
 
@@ -145,7 +145,7 @@
         <div class="skills-bar">
             <div class="skills-bar-label">Canva</div>
             <div class="skills-bar-progress">
-                <span class="animate" style="width: 80%;"><b>80%</b></span>
+                <span class="animate" style="width: 75%;"><b>75%</b></span>
             </div>
         </div>
 
@@ -190,20 +190,20 @@
                 </div>
             </div>
 
-            <div class="gallery-item" onclick="openModal('RedHat Certificate', 'Completed the RedHat class', 'certificate1.png')">
-                <img src="certificate1.png" alt="Project 2">
-                <div class="project-info">
-                    <h3>Certificate</h3>
-                    <p>Certificate Of Attendance</p>
-                </div>
-            </div>
-
             <div class="gallery-item" onclick="openModal('Application System Integration', ' WORDPRESS - PHP \n \nThis website was a group project as well were we created this for our Integration class using API and other integration apps. Check out the full website experience --link below', 'project5.png')">
                 <img src="project5.png" alt="Project 2">
                 <div class="project-info">
                     <h3>Project 5</h3>
                     <a href="https://devdarlings.bitbucket.io">DevDarlings</a>
                     
+                </div>
+            </div>
+
+             <div class="gallery-item" onclick="openModal('Internship WordPress Project', ' WORDPRESS \n \n Did this project during my Internship', 'project6.png')">
+                <img src="project6.png" alt="Project 2">
+                <div class="project-info">
+                    <h3>Project 6</h3>
+                    <p>Angeles City Call Center</p>
                 </div>
             </div>
     
