--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
                 <div class="contact-links">
                     <a href="https://github.com/Skzlly" target="_blank">GitHub</a>
-                    <a href="CV Resume.pdf" download="CV Resume.pdf" class="">Download CV</a>
+                    <a href="Louis Resume.pdf" download="Louis Resume.pdf" class="">Download CV</a>
                     
                 </div>
             </div>
